--- a/code/app/src/main/res/values/strings.xml
+++ b/code/app/src/main/res/values/strings.xml
@@ -1,3 +1,12 @@
 <resources>
     <string name="app_name">Enjoy your meal</string>
+
+    <string name="app_name2">dropDownMenuExample</string>
+    <string-array name="Unité">
+        <item>gramme</item>
+        <item>litre</item>
+        <item>cuillère à soupe</item>
+        <item>entier</item>
+        <item>gouttes</item>
+    </string-array>
 </resources>
